resolved merge conflicts with upstream

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Event.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Event.cshtml
@@ -29,7 +29,7 @@
                 @e.EventLocation
             </td>
             <td>
-                @e.EventDiscreption
+                @e.EventDescription
             </td>
         </tr>
     }
