--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Greeting.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Greeting.cshtml
@@ -4,6 +4,6 @@
 }
 <div class="text-center">
     <h1 class="display-4">@User.Identity.Name, Greetings To Our Site</h1>
-   @* <p>@ViewBag.Message</p>*@
+   <p>@ViewBag.Message</p>
 </div>
 
