got everything working like it is supposed to map now loaded the address from the front page

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Map/Mappage.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Map/Mappage.cshtml
@@ -1,8 +1,15 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Mvc.ModelBinding
+@using Microsoft.CodeAnalysis.VisualBasic.Syntax
+@model Location
+@{
     ViewData["Title"] = "Map Page";
 }
 
-<h3>My Google Maps Demo</h3>
+
+<input id="location" type="text" placeholder="@Model.location" value="@Model.location">
+
+
+<input id="submit" type="button" value="Submit" class="btn btn-primary"></>
 <!--The div element for the map -->
 <div id="map"></div>
 
