--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Location
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -7,6 +9,20 @@
     <h1 class="display-4">Welcome To Otter Productions Capstone Project</h1>
     
 </div>
+<br/>
+
+<form asp-action="Index" method="post" class="row g-2">
+    <div asp-validation-summary="All"></div>
+    <div class="text-center">
+        <div class="input-group-text ">
+    
+            <label asp-for="location" class="control-label">Address</label>
+            <input asp-for="location" class="form-control" required/>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+</form>
+
 <br/>
 
 <div class="text-center">
