Worked on MA-33 where I added the ability to view users in the Application DB and delete users as needed

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/MapAppUsers/Index.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/MapAppUsers/Index.cshtml
@@ -9,6 +9,7 @@
 <table class="table table-striped table-sm">
     <thead>
         <tr>
+            <th></th>
             <th>
                 @Html.DisplayNameFor(model => model.AspnetIdentityId)
             </th>
@@ -25,6 +26,7 @@
         @foreach (var item in Model)
         {
             <tr>
+                @* Got this line for checkboxes from https://www.c-sharpcorner.com/article/how-to-delete-multiple-rows-using-checkbox-in-mvc-5/*@
                 <td><input type="checkbox" name="ID" value="@item.AspnetIdentityId" class="custom-checkbox chkCheckBoxId" /></td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AspnetIdentityId)
