--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/MapAppUsers/Delete.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/MapAppUsers/Delete.cshtml
@@ -17,7 +17,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AspnetIdentityId)
         </dd>
-        <dt class = "col-sm-2">
+       @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
         <dd class = "col-sm-10">
@@ -28,7 +28,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
-        </dd>
+        </dd>*@
     </dl>
 
     <form asp-action="Delete">
