--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/MapAppUsers/Details.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/MapAppUsers/Details.cshtml
@@ -16,7 +16,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AspnetIdentityId)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
         <dd class = "col-sm-10">
@@ -27,7 +27,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
-        </dd>
+        </dd>*@
     </dl>
 </div>
 <div>
