Edited the layout and design of the user registration and login pages

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <img src="Images/logo.png" alt="LOGO" style="width: 600px; height: 300px;"/>
+    <img src="Images/logo.png" alt="LOGO" id="homepageLogo"/>
     <h1 class="display-4">Welcome To Otter Productions Capstone Project</h1>
     
 </div>
