model validations for registering an account

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -19,14 +19,14 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
              <div class="form-floating mb-3">
-                 <input asp-for="Input.FirstName" class="form-control" aria-required="true" placeholder="first" />
+                 <input asp-for="Input.FirstName" class="form-control" aria-required="true" placeholder="Jon" />
                   <label asp-for="Input.FirstName">First Name</label>
                   <span asp-validation-for="Input.FirstName" class="text-danger"></span>
              </div>
              <div class="form-floating mb-3">
-                  <input asp-for="Input.LastName" class="form-control"  aria-required="true" placeholder="last" />
+                  <input asp-for="Input.LastName" class="form-control"  aria-required="true" placeholder="Doe" />
                   <label asp-for="Input.LastName">Last Name</label>
-                  <span asp-validation-for="Input.Email" class="text-danger"></span>
+                  <span asp-validation-for="Input.LastName" class="text-danger"></span>
              </div>
              <div class="form-floating mb-3">
                   <input asp-for="Input.PhoneNumber" class="form-control" aria-required="true" placeholder="000-000-0000" />
@@ -34,7 +34,7 @@
                   <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
              </div>
              <div class="form-floating mb-3">
-                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password123!" />
                  <label asp-for="Input.Password">Password</label>
                  <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
