added organization link and form for register

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -43,8 +43,11 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
+
+            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Organization">Add New Org</a>
         </div>
     </div>
 </div>
