--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Organization.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Organization.cshtml
@@ -12,6 +12,12 @@
             <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
                 <h2>Create a new account.</h2>
                 <hr />
+                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                  <div class="form-floating mb-3">
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                <label asp-for="Input.Email">Email</label>
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                 </div>
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.OrganizationName" class="form-control" autocomplete="username" aria-required="true" placeholder="Organization Name" />
@@ -24,10 +30,31 @@
                     <label asp-for="Input.OrganizationDescription">Organization Description</label>
                     <span asp-validation-for="Input.OrganizationDescription" class="text-danger"></span>
                 </div>
-                   <div class="form-floating mb-3">
-                    <input asp-for="Input.Location" class="form-control" autocomplete="username" aria-required="true" placeholder="Organization Location" />
-                    <label asp-for="Input.OrganizationDescription">Organization Location</label>
-                    <span asp-validation-for="Input.Location" class="text-danger"></span>
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.OrganizationLocation" class="form-control" autocomplete="username" aria-required="true" placeholder="Organization Location" />
+                    <label asp-for="Input.OrganizationLocation">Organization Location</label>
+                    <span asp-validation-for="Input.OrganizationLocation" class="text-danger"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.PhoneNumber" class="form-control" aria-required="true" placeholder="000-000-0000" />
+                    <label asp-for="Input.PhoneNumber">Phone Number</label>
+                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
+               @* <div class="form-floating mb-3">
+                    <input type="checkbox" asp-for="Input.IsOrganization" required />
+                    <label asp-for="Input.IsOrganization">Is Organization</label>
+                    <span asp-validation-for="Input.IsOrganization" class="text-danger"></span>
+                </div>*@
+
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password123!" />
+                    <label asp-for="Input.Password">Password</label>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                    <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
 
                 <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Add</button>
