--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -33,6 +33,12 @@
                   <label asp-for="Input.PhoneNumber">Phone Number</label>
                   <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
              </div>
+                @*<div class="form-floating mb-3">
+                <input type="checkbox" asp-for="Input.IsOrganization" required />
+                <label asp-for="Input.IsOrganization">Is Organization</label>
+                <span asp-validation-for="Input.IsOrganization" class="text-danger"></span>
+                </div>*@
+
            
              <div class="form-floating mb-3">
                  <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password123!" />
