removed test for user is verified

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -54,7 +54,7 @@
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
 
-            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Organization">Add New Org</a>
+            <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Organization">Register as a Organization</a>
         </div>
     </div>
 </div>
