--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Index.cshtml
@@ -10,19 +10,25 @@
     
 </div>
 <br/>
+<div class="row">
+    <div class="col">
+        <form asp-action="Index" method="post">
+            
+                <div asp-validation-summary="All"></div>
 
-<form asp-action="Index" method="post" class="row g-2">
-    <div asp-validation-summary="All"></div>
-    <div class="text-center">
-        <div class="input-group-text ">
-    
-            <label asp-for="location" class="control-label">Address</label>
-            <input asp-for="location" class="form-control" required/>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+                
+            <div class="input-group-text">
+
+                        <label asp-for="location" class="control-label">Address</label>
+                        <input asp-for="location" class="form-control" required/>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                        
+
+            
+        </form>
     </div>
-</form>
-
+</div>
 <br/>
 
 <div class="text-center">
