--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -45,7 +45,7 @@
                 <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary" style="width: 75%; background-color: rgb(0,129,0)">Create Account</button>
             </form>
             <div class="haveAccount" style="padding-top: 3px;"><a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Do you already have an account? Login here!</a></div>
-            <div class="orgRegister" style="padding-top: 6px;"><a asp-page="/Account/Organization" asp-route-returnUrl="@Model.ReturnUrl">Do you want to register as an Organization? Click here</a></div>
+            <div class="orgRegister" style="padding-top: 6px;"><a asp-page="/Account/Organization" asp-route-returnUrl="@Model.ReturnUrl">Do you instead want to register as an Organization? Be directed here</a></div>
 
         
 
