Changed search bar place holder

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
@@ -55,7 +55,8 @@
                 sortOrder: 'descending',
                 pagination: true,
                 perPage: 10,
-                globalSearch: true
+                globalSearch: true,
+                inputPlaceholder: 'Input a location...'
             });
         });
     </script>
