added tests for users and organizations to solution, testing validation based on model data, also if identity user being added and saved to user stores

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -45,7 +45,7 @@
                 <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary" style="width: 75%; background-color: rgb(0,129,0)">Create Account</button>
             </form>
             <div class="haveAccount" style="padding-top: 3px;"><a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Do you already have an account? Login here!</a></div>
-            <div class="orgRegister" style="padding-top: 6px;"><a asp-page="/Account/Organization" asp-route-returnUrl="@Model.ReturnUrl">Do you instead want to register as an Organization? Be directed here</a></div>
+            <div class="orgRegister" style="padding-top: 6px;"><a asp-page="/Account/Organization" asp-route-returnUrl="@Model.ReturnUrl">Do you instead want to register as an Organization? Register here!</a></div>
 
         
 
@@ -55,7 +55,7 @@
             <br />
             @*<img src="/Images/logo.png" alt="LOGO" id="loginpageLogo" style="width:250px; height:150px; padding-left:10px;" />*@
             <br />
-            <h3>By creating a free account with us, you will be able to:</h3>
+            <h3>By creating a free User account with us, you will be able to:</h3>
             <div class="bulletPoints" style="padding-left: 13px;"> - Have your own profile page</div>
             <div class="bulletPoints" style="padding-left: 13px;"> - Save events you are interested in</div>
             <div class="bulletPoints" style="padding-left: 13px;"> - View your saved events later</div>
