--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Organization.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Organization.cshtml
@@ -55,7 +55,7 @@
                 <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary" style="width: 75%; background-color: rgb(0,129,0)">Create Account</button>
             </form>
             <div class="haveAccount" style="padding-top: 3px;"><a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Do you already have an account? Login here!</a></div>
-            <div class="userRegister" style="padding-top: 6px;"><a asp-page="/Account/Register" asp-route-returnUrl="@Model.ReturnUrl">Do you instead want to register as a User? Be directed here</a></div>
+            <div class="userRegister" style="padding-top: 6px;"><a asp-page="/Account/Register" asp-route-returnUrl="@Model.ReturnUrl">Do you instead want to register as a User? Register here!</a></div>
 
         
 
