updated scripts to run latest changes from dev

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Organization.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Organization.cshtml
@@ -10,6 +10,11 @@
             <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
 
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                <div class="form-control mb-3">
+                    <input type="checkbox" class="form-check-input" asp-for="Input.IsOrganization" required />
+                    <label class="form-check-label, text-start" asp-for="Input.IsOrganization">Verify this is a organization account</label>
+                    <span asp-validation-for="Input.IsOrganization" class="text-danger"></span>
+                </div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                     <label asp-for="Input.Email">Email (Ex: name@example.com)</label>
@@ -37,7 +42,7 @@
                 </div>
                   <div class="form-floating mb-3">
                     <input asp-for="Input.PhoneNumber" class="form-control" aria-required="true" placeholder="0000000000" />
-                    <label asp-for="Input.PhoneNumber">Phone Number (Ex: 0000000000)</label>
+                    <label asp-for="Input.PhoneNumber">Phone Number</label>
                     <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
