added organization profile page using controller scaffold details,  displayed data of organization onto page

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Logout.cshtml
@@ -12,10 +12,17 @@
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
                 <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
             </form>
+           
+            
+                     var name = User.Identity.Name;
+                    <text>  &nbsp;&nbsp;&nbsp; @Html.ActionLink("Profile", "UserProfile", "Account", new { id = User.Identity.Name }, new { @title = "View Profile" }) </text>
+                
         }
         else
         {
             <p>You have successfully logged out of the application.</p>
         }
     }
+
+   
 </header>
