--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Map" asp-action="Mappage">Map</a></li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Browsing">Browse</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BrowsingSearch">Browse local events</a>
                         </li>
                     </ul>
                 </div>
