--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Map/Mappage.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Map/Mappage.cshtml
@@ -24,9 +24,26 @@
 </div>
 
 <br />
-<!--The div element for the map -->
-<div id="map"></div>
 
+<div class="container">
+    
+    <!--The div element for the map -->
+    <div class="row">
+        <div class="col-8">
+
+            <div id="map"></div>
+        </div>
+         <div class="col-4" id="sidebar">
+             <div>
+                 <h2 id="list-title"></h2>
+                 <ul id="places"></ul>
+                 <button id="more" hidden="hidden">Load more results</button>
+             </div>
+                
+            </div>
+        
+    </div>
+</div>
 @*<!-- 
 The `defer` attribute causes the callback to execute after the full HTML
 document has been parsed. For non-blocking uses, avoiding race conditions,
