--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
@@ -59,17 +59,60 @@ body {
 
 /*Map*/
 
-#map {
-    height: 700px; /* The height is 400 pixels */
-    width: 100%; /* The width is the width of the web page */
+
+
+#sidebar {
+    /*flex-basis: 5rem;
+    flex-grow: 1;
+    padding: 1rem;
+    max-width: 30rem;
+    height: 100%;
+    box-sizing: border-box;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;*/
 }
+
+#map {
+    height: 700px; /*The height is 700 pixels */
+    width: 100%; /*The width is the width of the web page */
+}
+
+#sidebar {
+    /*display: flex;
+    flex-direction: column;*/
+}
+
+#places {
+/*    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    overflow-y: scroll;
+    flex-grow: 1;*/
+}
+
+#placesitem {
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 1.25rem;
+    cursor: pointer;
+}
+
+#placesitem:nth-child(odd) {
+    background-color: #fcfcfc;
+}
+
+
+
+
 
 .thead, .tbody {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
 }
-
-
 /*User Login*/
 
 .registrationLink {
