Added form types and created inital viewmodel that will take in the form data

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
@@ -12,10 +12,19 @@
 
     <form asp-controller="Home" asp-action="BrowsingSearch" method="post">
         <div class="form-group">
+            <br />
             <label for="LocationAddress">Enter your location:</label>
-            <br>
-            <input type="text" id="location" name="location" value="">
-            <br>
+            <input type="text" id="location" name="Location" value="">
+            <br />
+            <label for="CityLocation">Enter your city:</label>
+            <input type="text" id="city " name="City " value="">
+            <br />
+            <label for="StateLocation">Enter your state:</label>
+            <input type="text" id="state" name="State" value="">
+            <br />
+            <label for="Zipcode">Enter your zip:</label>
+            <input type="text" id="zip" name="Zip" value="">
+            <br />
         </div>
         <br>
         <hr />
