--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Organization.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Areas/Identity/Pages/Account/Organization.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-control mb-3">
                     <input type="file" class="form-check-input" name="fileUpload" required placeholder="Upload Image" />
-                   @* <label asp-for="Input.ProfileImage"></label>*@
+                   @* <label>Upload Image</label>*@
                     <span asp-validation-for="Input.ProfileImage" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
