--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
@@ -11,9 +11,7 @@
 
     @if(Model.Events.Count() == 0)
     {
-        <dd class="col-sm-10">
-            <p>There aren't any events currently</p>
-        </dd>
+        <p>There aren't any events in your area</p>
     }else
     {
         <table class="table table-sm" id="logTable">
@@ -39,10 +37,10 @@
                                     <td>@Model.Organizations.ElementAt(events.OrganizationId - 1).OrganizationDescription</td>
                                 }
                                 @*Grabs the Event type based on the EventTypes ID*@
-                                @if (events.EventTypeId == Model.EventsTypes.ElementAt(events.EventTypeId - 1).Id)
+@*                                @if (events.EventTypeId == Model.EventsTypes.ElementAt(events.EventTypeId - 1).Id)
                                 {
                                     <td>@Model.EventsTypes.ElementAt(events.EventTypeId - 1).EventType1</td>
-                                }
+                                }*@
                             </tr>
                         }
                 </tbody>
