--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
@@ -17,30 +17,44 @@
         <table class="table table-sm" id="logTable">
                 <thead>
                     <tr>
+                        @if (Model.EventsTypes != null)
+                        {
+                            <th scope="col">Event Type</th>
+                        }
                         <th scope="col">Name</th>
                         <th scope="col">Location</th>
                         <th scope="col">Description</th>
-                        <th scope="col">Organization</th>
+                        <th scope="col">Date & Time</th>
+                        @if (Model.Organizations != null)
+                        {
+                            <th scope="col">Organization</th>
+                        }
                     </tr>
                 </thead>
                 <tbody>
                         @foreach (var events in Model.Events)
                         {
                             <tr>
+                                @*Grabs the Event type based on the EventTypes ID*@
+                                @if (Model.EventsTypes != null)
+                                {
+                                   @if (events.EventTypeId == Model.EventsTypes.ElementAt(events.EventTypeId - 1).Id)
+                                    {
+                                        <td>@Model.EventsTypes.ElementAt(events.EventTypeId - 1).EventType1</td>
+                                    }
+                                }
                                 <td>@events.EventName</td>
                                 <td>@events.EventLocation</td>
                                 <td>@events.EventDescription</td>
                                 <td>@events.EventDate</td>
                                 @*Grabs the organization info based on the event Organizations ID*@
-                                @if (events.OrganizationId == Model.Organizations.ElementAt(events.OrganizationId - 1).OrganizationLoginId)
+                                @if (Model.Organizations != null)
                                 {
-                                    <td>@Model.Organizations.ElementAt(events.OrganizationId - 1).OrganizationDescription</td>
+                                    @if (events.OrganizationId == Model.Organizations.ElementAt(events.OrganizationId - 1).OrganizationLoginId)
+                                    {
+                                        <td>@Model.Organizations.ElementAt(events.OrganizationId - 1).OrganizationDescription</td>
+                                    }
                                 }
-                                @*Grabs the Event type based on the EventTypes ID*@
-@*                                @if (events.EventTypeId == Model.EventsTypes.ElementAt(events.EventTypeId - 1).Id)
-                                {
-                                    <td>@Model.EventsTypes.ElementAt(events.EventTypeId - 1).EventType1</td>
-                                }*@
                             </tr>
                         }
                 </tbody>
