--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/OrganizationDetails.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/OrganizationDetails.cshtml
@@ -41,7 +41,8 @@
                             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Events</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Organization" asp-action="Events" role="tab" aria-controls="profile" aria-selected="false">Evetns</a>
+                            @*<a class="nav-link" id="profile-tab" data-toggle="tab" href="Organization/Events" role="tab" aria-controls="profile" aria-selected="false">Events</a>*@
                         </li>
                     </ul>
                 </div>
