--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/CreateEvent.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/CreateEvent.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "CreateEvent";
 }
+<link href="~/css/events.css" rel="stylesheet" />
 
 <div class="container">
     <div class="row">
