Began implementing color scheme

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Privacy.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Privacy.cshtml
@@ -2,62 +2,64 @@
     ViewData["Title"] = "Privacy Policy";
 }
 
-<div class="privacyHeader">Map App Privacy Policy</div>
+<body style="background-color: #15202b">
+    <div class="privacyHeader">Map App Privacy Policy</div>
 
-<br />
+    <br />
 
-<div class="whatInfoTitle">What Information We Collect</div>
+    <div class="whatInfoTitle">What Information We Collect</div>
 
-<br />
-<div class="whatInfoStatement">
-    If you have an account, we will collect information about your email
-    and your password. This will also include any other information
-    you enter when creating an account such as type of user,
-    name, or phone number. We will also collect information about any events you
-    have saved to your profile.
+    <br />
+    <div class="whatInfoStatement">
+        If you have an account, we will collect information about your email
+        and your password. This will also include any other information
+        you enter when creating an account such as type of user,
+        name, or phone number. We will also collect information about any events you
+        have saved to your profile.
+        <br />
+        <br />
+        If you have entered your location when using the website, we will
+        also collect information about this.
+        <br />
+        <br />
+        If you are registered as an organization, we will collect your login information as
+        well as any information you enter about your organization such as location(s),
+        type, and hours. We will also save information about the events that are
+        created for the organization.
+
+    </div>
+
     <br />
     <br />
-    If you have entered your location when using the website, we will
-    also collect information about this.
-    <br />
-    <br />
-    If you are registered as an organization, we will collect your login information as
-    well as any information you enter about your organization such as location(s),
-    type, and hours. We will also save information about the events that are
-    created for the organization.
-    
-</div>
 
-<br />
-<br />
+    <div class="useInfoTitle">How We Use the Information </div>
 
-<div class="useInfoTitle">How We Use the Information </div>
+    <br />
+    <div class="useInfoStatement">
+        We will use your personal and account information as a way to keep track
+        of users and their accounts.
+        <br />
+        <br />
+        We will use your location information as a way to improve the website
+        and its functionalites for the user. Provided you enter your location,
+        it will be used to help centralize and narrow the events that are being
+        shown to you.
+        <br />
+        <br />
+        For organizations, we will use the organization's information to keep track
+        of organizations within our system as well as to have information about
+        the events that each organization is holding. This information will be
+        used to help improve the experience of the user and the organization.
+    </div>
 
-<br />
-<div class="useInfoStatement">
-    We will use your personal and account information as a way to keep track
-    of users and their accounts.
     <br />
     <br />
-    We will use your location information as a way to improve the website 
-    and its functionalites for the user. Provided you enter your location,
-    it will be used to help centralize and narrow the events that are being 
-    shown to you.
-    <br />
-    <br />
-    For organizations, we will use the organization's information to keep track 
-    of organizations within our system as well as to have information about
-    the events that each organization is holding. This information will be
-    used to help improve the experience of the user and the organization.
-</div>
+    <div class="contactUsTitle">Contact Us</div>
 
-<br />
-<br />
-<div class="contactUsTitle">Contact Us</div>
-
-<br />
-<div class="contactUsStatement">
-    If you have any further questions about the way we use data, please 
-    contact us here.
-</div>
-<br />
+    <br />
+    <div class="contactUsStatement">
+        If you have any further questions about the way we use data, please
+        contact us here.
+    </div>
+    <br />
+</body>
